static/sass/main.scss
/* ... */
.image-content .image-interactions .save-this-shake-selector {
    position: absolute;
    z-index: 1;
    width: 170px;
    min-height: 30px;
    right: 0;
    top: 0;
    background-color: #ff9d00;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    padding: 7px 0;
}

.image-content .image-interactions .save-this-shake-selector-loading {
    min-height: 100px;
}

.image-content .image-interactions .save-this-shake-selector-loading::after {
    -webkit-animation: load8 1.1s infinite linear;
    animation: load8 1.1s infinite linear;
    border-radius: 50%;
    border: 5px solid rgba(255, 255, 255, 0.2);
    border-left-color: #ffffff;
    content: '';
    display: block;
    height: 50px;
    margin: 1em auto;
    -ms-transform: translateZ(0);
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    width: 50px;
}

@-webkit-keyframes load8 {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
@keyframes load8 {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
.image-content .image-interactions .save-this-shake-selector ul {
    clear: both;
    margin: 0;
    padding: 0;
    list-style: none;
}

.image-content .image-interactions .save-this-shake-selector a {
    padding: 7px 7px;
    margin: 0 7px;
    color: #fff;
    font-weight: bold;
    display: block;
    text-decoration: none;
    text-shadow: 1px 1px 1px #e48c00;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

.image-content .image-interactions .save-this-shake-selector a:hover {
    background-color: #ffb338;
    color: #fff;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.image-content .image-interactions .save-this-shake-selector .close {
    display: block;
    cursor: pointer;
    position: absolute;
    top: 10px;
    right: 10px;
    color: #fff;
    transform: rotate(180deg);
}

.image-content .image-interactions .save-this-shake-selector .close:hover,
.image-content .image-interactions .save-this-shake-selector .close:focus {
    opacity: .66;
}

.image-content .image-interactions .save-this-shake-selector .close::before {
    content: '';
    position: absolute;
    top: -19px;
    right: -15px;
    bottom: -11px;
    left: -15px;
}

.permalink-sidebar {
    position: relative;
    padding-top: 15px;
    padding-right: 30px;
}

.permalink-sidebar a {
    color: $color-mltshp-pink;
    font-weight: bold;
    text-decoration: none;
}

.sidebar-stats {
    margin-top: 30px;
    background-color: #e5fcff;
    padding: 5px 10px 0 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    font-size: 14px;
    font-weight: bold;
    display: flex;
    flex-wrap: wrap;
}

.sidebar-stats > * {
    flex: 1;
}

.sidebar-stats-block {
}

.sidebar-stats-block .tab {
    padding: 10px 10px 10px 10px;
    display: block;
}

.sidebar-stats-views {
    color: #4b4b4b;
}

.sidebar-stats-views .tab {
    padding-right: 10px;
}

.sidebar-stats-saves {
    color: #ff8400;
    text-align: left;
}

.sidebar-stats-saves .tab {
}

.sidebar-stats-hearts {
    color: #ff0000;
}

.sidebar-stats-hearts .tab {
    padding-right: 10px;
}

.sidebar-stats .selected .tab {
    background-color: #fff;
    -webkit-border-top-left-radius: 10px;
    -webkit-border-top-right-radius: 10px;
    -moz-border-radius-topleft: 10px;
    -moz-border-radius-topright: 10px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.sidebar-stats .enable-cursor {
    cursor: pointer;
}

.sidebar-stats-content {
    display: none;
    clear: both;
    margin-bottom: 15px;
    background-color: #fff;
    -webkit-border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
    -moz-border-radius-bottomright: 10px;
    -moz-border-radius-bottomleft: 10px;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
    padding: 15px;
    flex-basis: 100%;
}

.sidebar-stats-content .user-action {
    clear: both;
    margin-bottom: 5px;
    display: flex;
}

.sidebar-stats-content .icon {
    width: 20px;
    height: 20px;
    display: block;
    margin-right: 5px;
}

.sidebar-stats-content .name {
    display: block;
    padding-top: 5px;
    word-break: break-word;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

.sidebar-stats-content .date {
    padding-top: 7px;
    color: #7f7f7f;
    font-weight: normal;
    font-size: smaller;
    margin-left: 10px;
    display: block;
    white-space: nowrap;
}

.permalink-sidebar .meta-data {
    margin-top: 30px;
    clear: both;
}

.permalink-sidebar .meta-data h4 {
    font-size: 14px;
    padding-left: 15px;
    font-weight: bold;
    color: #666;
}

.permalink-sidebar .meta-data p {
    padding: 10px 15px;
    background-color: #ededed;
    margin: 6px 0;
    font-size: 12px;
    color: #666;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.permalink-sidebar h4.shake-details-title {
    font-size: 14px;
    padding-left: 15px;
    font-weight: bold;
    color: #666;
    margin-top: 30px;
    padding-bottom: 5px;
}

.permalink-sidebar .in-these-shakes {
    margin: 0 0 30px 0;
    background-color: #DFFFCB;
    padding: 15px 15px 7px 15px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
}

.permalink-sidebar .in-these-shakes ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.permalink-sidebar .in-these-shakes li {
    font-size: 14px;
    margin-bottom: 8px;
    display: flex;
}

.permalink-sidebar .in-these-shakes li a {
    flex: 1;
    display: block;
    word-break: break-word;
    word-wrap: break-word;
    overflow-wrap: break-word;
    overflow: hidden;
}
/* ... */

